Finished simple quiz, renamed some files

--- a/projects.json
+++ b/projects.json
@@ -50,8 +50,8 @@
     "link": "project10/index.html"
   },
   {
-    "name": "11. Expense Tracker",
-    "icon": "fas fa-coins",
+    "name": "11. Simple Quiz",
+    "icon": "fas fa-question",
     "link": "project11/index.html"
   },
   {
