password generator made, let you choose the length

--- a/projects.json
+++ b/projects.json
@@ -55,13 +55,13 @@
     "link": "project11/index.html"
   },
   {
-    "name": "12. Typing Game",
-    "icon": "fas fa-keyboard",
+    "name": "12. Generate Password",
+    "icon": "fas fa-key",
     "link": "project12/index.html"
   },
   {
-    "name": "13. Image Slider",
-    "icon": "fas fa-images",
+    "name": "13. English Dictionary",
+    "icon": "fas fa-book",
     "link": "project13/index.html"
   },
   {
