Prepeared next project

--- a/projects.json
+++ b/projects.json
@@ -65,8 +65,8 @@
     "link": "project13/index.html"
   },
   {
-    "name": "14. Color Picker",
-    "icon": "fas fa-paint-brush",
+    "name": "14. Random quote generator",
+    "icon": "fas fa-quote-right",
     "link": "project14/index.html"
   },
   {
