Anime Picture Generator but api does not work anymore

--- a/projects.json
+++ b/projects.json
@@ -70,8 +70,8 @@
     "link": "project14/index.html"
   },
   {
-    "name": "15. Form Validation",
-    "icon": "fas fa-check-circle",
+    "name": "15. Anime Picture Generator (api doesn't work anymore)",
+    "icon": "fas fa-dragon",
     "link": "project15/index.html"
   },
   {
