--- a/projects.json
+++ b/projects.json
@@ -8,7 +8,7 @@
       "name": "Heart Trail Animation",
       "description": "Create beautiful heart-shaped trails that follow your mouse movement with smooth animations.",
       "icon": "fas fa-heart",
-      "link": "project01/index.html",
+      "link": "hearttrailing/index.html",
       "tags": ["animation", "mouse-events", "interactive"],
       "difficulty": "beginner",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -18,7 +18,7 @@
       "name": "Auto Text Effect Animation",
       "description": "Text animation effects with customizable speed and styling options.",
       "icon": "fas fa-pen",
-      "link": "project02/index.html",
+      "link": "autotexteffect/index.html",
       "tags": ["animation", "text-effects", "typography"],
       "difficulty": "beginner",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -28,7 +28,7 @@
       "name": "Mini Calendar",
       "description": "A compact and stylish calendar widget showing current date information.",
       "icon": "fas fa-calendar",
-      "link": "project03/index.html",
+      "link": "minicalendar/index.html",
       "tags": ["date", "widget", "utility"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "Date API"]
@@ -38,7 +38,7 @@
       "name": "Button Ripple Effect",
       "description": "Create engaging ripple animations for button interactions.",
       "icon": "fas fa-bolt",
-      "link": "project04/index.html",
+      "link": "ripplebutton/index.html",
       "tags": ["animation", "interaction", "effects"],
       "difficulty": "beginner",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -48,7 +48,7 @@
       "name": "Random Image Generator",
       "description": "Generate random images with customizable parameters and filters.",
       "icon": "fas fa-image",
-      "link": "project05/index.html",
+      "link": "randomimagegenerator/index.html",
       "tags": ["api", "images", "random"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "External API"]
@@ -58,7 +58,7 @@
       "name": "Dark Mode",
       "description": "Implement a smooth dark mode toggle with persistent user preferences.",
       "icon": "fas fa-moon",
-      "link": "project06/index.html",
+      "link": "darkmode/index.html",
       "tags": ["theme", "accessibility", "user-preference"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "LocalStorage"]
@@ -68,7 +68,7 @@
       "name": "Dad Jokes Generator",
       "description": "Fetch and display random dad jokes using an external API.",
       "icon": "fas fa-quote-right",
-      "link": "project07/index.html",
+      "link": "dadjoke/index.html",
       "tags": ["api", "humor", "fetch"],
       "difficulty": "beginner",
       "technologies": ["HTML", "CSS", "JavaScript", "External API"]
@@ -78,7 +78,7 @@
       "name": "Feedback UI",
       "description": "Interactive feedback form with emoji reactions and animations.",
       "icon": "fas fa-comments",
-      "link": "project08/index.html",
+      "link": "feedbackui/index.html",
       "tags": ["ui", "interaction", "form"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -88,7 +88,7 @@
       "name": "Weather App",
       "description": "Real-time weather information with location-based updates.",
       "icon": "fas fa-sun",
-      "link": "project09/index.html",
+      "link": "weather/index.html",
       "tags": ["api", "weather", "geolocation"],
       "difficulty": "advanced",
       "technologies": ["HTML", "CSS", "JavaScript", "Weather API", "Geolocation API"]
@@ -98,7 +98,7 @@
       "name": "Todo List",
       "description": "Feature-rich todo list with local storage and filtering options.",
       "icon": "fas fa-list",
-      "link": "project10/index.html",
+      "link": "todolist/index.html",
       "tags": ["crud", "localStorage", "utility"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "LocalStorage"]
@@ -108,7 +108,7 @@
       "name": "Simple Quiz",
       "description": "Interactive quiz application with score tracking and results.",
       "icon": "fas fa-question",
-      "link": "project11/index.html",
+      "link": "simplequiz/index.html",
       "tags": ["quiz", "interactive", "education"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -118,7 +118,7 @@
       "name": "Password Generator",
       "description": "Generate secure passwords with customizable options.",
       "icon": "fas fa-key",
-      "link": "project12/index.html",
+      "link": "passwordgenerator/index.html",
       "tags": ["security", "utility", "random"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript"]
@@ -128,7 +128,7 @@
       "name": "English Dictionary",
       "description": "Look up word definitions with pronunciation and examples.",
       "icon": "fas fa-book",
-      "link": "project13/index.html",
+      "link": "englishdictionary/index.html",
       "tags": ["api", "dictionary", "education"],
       "difficulty": "advanced",
       "technologies": ["HTML", "CSS", "JavaScript", "Dictionary API"]
@@ -138,7 +138,7 @@
       "name": "Random Quote Generator",
       "description": "Display inspiring quotes with author attribution.",
       "icon": "fas fa-quote-right",
-      "link": "project14/index.html",
+      "link": "randomquotegenerator/index.html",
       "tags": ["api", "quotes", "inspiration"],
       "difficulty": "beginner",
       "technologies": ["HTML", "CSS", "JavaScript", "Quotes API"]
@@ -148,7 +148,7 @@
       "name": "Anime Picture Generator",
       "description": "Generate random anime pictures using an external API (API Does not work anymore).",
       "icon": "fas fa-dragon",
-      "link": "project15/index.html",
+      "link": "animepicturegenerator/index.html",
       "tags": ["api", "anime", "images"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "Anime API"]
@@ -158,7 +158,7 @@
       "name": "Memory Chunking Game",
       "description": "A game where you have to memorize a sequence of numbers and then input them in the correct order.",
       "icon": "fas fa-brain",
-      "link": "project16/index.html",
+      "link": "memorychunkinggame/index.html",
       "tags": ["game", "memory", "cognitive"],
       "difficulty": "intermediate",
       "technologies": ["HTML", "CSS", "JavaScript", "LocalStorage"]
